src/test/resources/testinput/cocos/valid/validVariableDeclaration.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl validVariableDeclaration {
  inv:
  let
    Set<Integer> set = {1..5}
  in
    true;
}