src/test/resources/testinput/cocos/invalid/invalidUnnamedInvariantHasParameters.ocl
/* (c) https://github.com/MontiCore/monticore */

ocl invalidUnnamedInvariantHasParameters{
    inv (int i = 5): true;
}